--- a/css/media.css
+++ b/css/media.css
@@ -1,14 +1,18 @@
-
 @media (max-width: 1170px) {
-
+	#goods p {
+		color: #000;
+	}
 }
 
+
 /* Portrait tablets and medium desktops */
+
 @media (min-width: 992px) and (max-width: 1199px) {
 	.contant_padding {
 		padding: 0;
 	}
 }
+
 @media (max-width: 991px) {
 	.header_articles .col-md-3 {
 		margin-right: 0;
@@ -22,25 +26,24 @@
 	.help_item p {
 		margin-right: 10px;
 	}
-
 }
 
 
 /* Landscape phones and portrait tablets */
+
 @media (max-width: 767px) {
 	.btn {
 		outline: none;
 	}
 	.container,
 	.row {
-
 		margin: 0;
 	}
 	header {
 		background-size: cover;
 		background-position: 0;
 	}
-	.header_content h1{
+	.header_content h1 {
 		margin-top: 60px;
 		font-size: 45px;
 	}
@@ -63,28 +66,59 @@
 		text-align: center;
 		background: rgba(0, 0, 0, 0.6);
 	}
-	nav ul li{
+	nav ul li {
 		padding-top: 10px;
 	}
 	nav ul li:hover {
-		  border-top: 3px solid transparent;
+		border-top: 3px solid transparent;
 	}
 	nav ul li a:hover,
 	nav ul li:active a {
 		color: #32be60;
 	}
 	nav ul li,
-	nav ul li:last-child a{
+	nav ul li:last-child a {
 		display: block;
 		margin-right: 0;
 	}
-
+	#goods button {
+		display: block;
+		margin: 0 auto;
+		margin-top: 75px;
+	}
 }
+
+@media (max-width: 530px) {
+	#footer ul {
+		width: 100%;
+	}
+	#footer ul li {
+		width: 15%;
+	}
+	#footer ul li:last-child {
+		width: 25%;
+	}
+}
+
+
 /* Landscape phones and smaller */
+
 @media (max-width: 480px) {
+	.btn {
+		padding: 15px 30px;
+		font-size: 12px;
+	}
 	.campaign_content {
 		padding: 0 25px;
 	}
-
+	.section_pading {
+		padding-top: 50px;
+	}
+	#goods h2 {
+		font-size: 20px;
+		text-align: center;
+	}
+	#goods button {
+		margin-top: 50px;
+	}
 }
-
